--- a/testing/website1/templates/home.html
+++ b/testing/website1/templates/home.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
  {% block test %}
 <h1>Home</h1>
- {% endblock test %}
+
+<p>This is the home page.</p>
+
+{% for var in num_list %}
+<p style="background-color: blue">Random-Number: {{var}}</p> <br>
+{% endfor %}
+ {% endblock test %}}
