--- a/testing/website1/templates/weight_list.html
+++ b/testing/website1/templates/weight_list.html
@@ -5,7 +5,7 @@
 <h1>Weight List</h1>
 <ul>
 {% for w in object_list %}
-<li>Name: {{w.name}} | Date: {{w.date}} | Weight: {{ w.weight }} | Gym: {{w.gym}}</li>
+<li> <a href="/weight/{{ w.slug }}">Name: {{w.name}}</a> | Date: {{w.date}} | Weight: {{ w.weight }} | Gym: {{w.gym}}</li>
 {% endfor %}
 </ul>
 {% endblock %}
