--- a/testing/website1/templates/Website1/form.html
+++ b/testing/website1/templates/Website1/form.html
@@ -7,7 +7,8 @@
 {% if errors %}
 {{ errors }}
 {% endif %}
-<form method="POST"> {% csrf_token %}
+<form method="POST"> 
+{% csrf_token %}
 {{ form.as_p }}
 <button type="submit">Save</button>
 </form>
