--- a/testing/website1/templates/home.html
+++ b/testing/website1/templates/home.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+	{% block head %}
+   {% load staticfiles %}
+      <link rel="stylesheet" href="{% static 'styles.css' %}">
+    {% endblock head %}
  {% block test %}
 <h1>Home</h1>
 
